--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,12 @@
 # 应用配置
 APP_TITLE=埋点系统API
 APP_VERSION=1.0.0
-DEBUG=True
+ENV=test
 
+# 服务配置
+HOST=127.0.0.1
+PORT=8000
+RELOAD=True
 
 # 数据库配置
 DB_HOST=localhost
